--- a/ets/proxy/proxysql.cnf
+++ b/ets/proxy/proxysql.cnf
@@ -66,6 +66,11 @@ mysql_users:
 		username = "playground"
 		password = "playground"
 		default_hostgroup = 2
+	},
+	{
+		username = "ojack"
+		password = "w4ll3t"
+		default_hostgroup = 2
 	}
 )
 
