--- a/ets/proxy/proxysql.cnf
+++ b/ets/proxy/proxysql.cnf
@@ -3,8 +3,8 @@ errorlog="/var/lib/proxysql/proxysql.log"
 
 admin_variables=
 {
-        admin_credentials="admin:password"
-        mysql_ifaces="127.0.0.1:6032"
+        admin_credentials="admin:password;receh:receh"
+        mysql_ifaces="0.0.0.0:6032"
 }
 
 mysql_variables=
