--- a/ets/db/mysql_cnf/db2.cnf
+++ b/ets/db/mysql_cnf/db2.cnf
@@ -38,9 +38,9 @@ loose-group_replication_ssl_mode = REQUIRED
 loose-group_replication_recovery_use_ssl = 1
 
 # Shared replication group configuration
-loose-group_replication_group_name = "959cf631-538c-415d-8164-ca00181be227"
-loose-group_replication_ip_whitelist = "172.69.16.6,172.69.16.7,172.69.16.8"
-loose-group_replication_group_seeds = "172.69.16.6:33061,172.69.16.7:33061,172.69.16.8:33061"
+loose-group_replication_group_name = "75caeeaa-c517-4b44-89a0-c6135cb82419"
+loose-group_replication_ip_whitelist = "172.69.16.6, 172.69.16.7, 172.69.16.8"
+loose-group_replication_group_seeds = "172.69.16.6:33061, 172.69.16.7:33061, 172.69.16.8:33061"
 
 # Single or Multi-primary mode? Uncomment these two lines
 # for multi-primary mode, where any host can accept writes
