--- a/wordpress-redis/docker-compose.yml
+++ b/wordpress-redis/docker-compose.yml
@@ -5,7 +5,12 @@ networks:
     driver: bridge
     ipam:
       config:
-        - subnet: 172.69.16.0/27
+        - subnet: 172.69.16.0/28
+  nocachenet:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: 172.70.16.0/29
 
 services:
   db:
@@ -19,8 +24,20 @@ services:
       MYSQL_PASSWORD: wordpress
     networks:
       wordpressnet:
-        ipv4_address: 172.69.16.8
+        ipv4_address: 172.69.16.7
   
+  db_nocache:
+    image: mysql:5.7.27
+    container_name: db_nocache
+    hostname: db_nocache
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: wordpress
+      MYSQL_USER: wordpress
+      MYSQL_PASSWORD: wordpress
+    networks:
+      - nocachenet
+
   web:
     image: wordpress:5.3.0-apache
     container_name: web
@@ -39,6 +56,8 @@ services:
         define('WP_REDIS_SERVERS', ['tcp://wordpress-redis_sentinel_1:26379/?alias=sen1', 'tcp://wordpress-redis_sentinel_2:26379/?alias=sen2', 'tcp://wordpress-redis_sentinel_3:26379/?alias=sen3']);      
     ports:
       - 8069:80
+    depends_on:
+      - db
     networks:
       wordpressnet:
         ipv4_address: 172.69.16.6
@@ -48,16 +67,17 @@ services:
     container_name: web_nocache
     hostname: web_nocache
     environment:
-      WORDPRESS_DB_HOST: db
+      WORDPRESS_DB_HOST: db_nocache
       WORDPRESS_DB_USER: wordpress
       WORDPRESS_DB_PASSWORD: wordpress
-      WORDPRESS_DB_NAME: wordpress_nocache
+      WORDPRESS_DB_NAME: wordpress
       WORDPRESS_TABLE_PREFIX: wp_
     ports:
       - 8070:80
+    depends_on:
+      - db_nocache
     networks:
-      wordpressnet:
-        ipv4_address: 172.69.16.7
+      - nocachenet
 
   master:
     image: bitnami/redis:latest
@@ -78,6 +98,7 @@ services:
       ALLOW_EMPTY_PASSWORD: 'yes'
     depends_on:
       - master
+      - web
     networks:
       - wordpressnet
 
@@ -87,5 +108,6 @@ services:
       REDIS_MASTER_HOST: redis-master
     depends_on:
       - master
+      - web
     networks:
       - wordpressnet
