--- a/eas/img/prometheus.yml
+++ b/eas/img/prometheus.yml
@@ -26,7 +26,7 @@ scrape_configs:
       - '172.80.16.6:10080'
 
   - job_name: 'pd'
-    honor_labels: true  # Do not overwrite job & instance labels.
+    honor_labels: true
     static_configs:
     - targets:
       - '172.80.16.2:2379'
